@@ -3,6 +3,13 @@
 	* www/people/editjob.php: Audit: escape special characters from
 	user input before submitting to database.
 
+	* common/frs/FRSPackage.class: ditto.
+
+	* common/frs/FRSRelease.class: ditto, plus re-fetch data on
+	update.
+
+	* www/project/admin/editrelease.php: ditto, plus fix bogus
+	warning about "file upload attack".
 
 2003-01-17  Reinhard Spisser   <reinhard@spisser.it>
 
